added links to projects

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -138,3 +138,19 @@ h2 {
 .close-btn:hover {
   background-color: #d32f2f;
 }
+
+.project-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease;
+}
+
+.project-button:hover {
+  background-color: #0056b3;
+}
+
